...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Icono de flecha hacia atrás -->
    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:layout_marginStart="21dp"/>

    <!-- Título de Entrenamiento ajustado -->
    <TextView
        android:id="@+id/tvTrainingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrenamiento"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_below="@id/ivBackArrow"
...
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="21dp"/>

    <!-- Temporizador -->
    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initTimer"
        android:textSize="70sp"
        android:textColor="@color/yellow"
        android:layout_below="@id/tvTrainingTitle"
...
                android:layout_height="wrap_content"
                android:text="@string/calorias_activas"
                android:textSize="20sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvActiveCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_inicial"
                android:textSize="32sp"
                android:textColor="@color/white" />
        </LinearLayout>
...
                android:layout_height="wrap_content"
                android:text="@string/calorias_totales"
                android:textSize="20sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvTotalCaloriesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor_inicial"
                android:textSize="32sp"
                android:textColor="@color/white" />
        </LinearLayout>
...
        android:orientation="horizontal"
        android:layout_below="@id/containerActiveCaloriesPower"
        android:layout_marginTop="10dp"
        android:padding="16dp">

        <Button
            android:id="@+id/btnIniciar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/iniciar"
            android:textColor="@color/white"
            android:backgroundTint="@color/red"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/finalizar"
            android:textColor="@color/white"
            android:backgroundTint="@color/red" />
...
                android:textSize="32sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- FTP -->
        <LinearLayout
            android:id="@+id/containerFTP"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:orientation="vertical">

...
