...
    <string name="get_rutina_alimentacion_movil">get_rutina_alimentacion_movil/</string>
    <string name="get_rutina_descanso_movil">get_rutina_descanso_movil/</string>
    <string name="pausarTextBtn">Pausar</string>
    <string name="reanudarTextBtn">Reanudar</string>
    <string name="iniciar">Iniciar</string>
    <string name="entrenamiento">Entrenamiento</string>
    <string name="initTimer">00:00:00</string>
    <string name="calorias_activas">Calorías activas</string>
    <string name="calorias_totales">Calorías totales</string>
    <string name="fcm">Frecuencia Cardiaca Maxima FCM</string>
    <string name="ftp">FTP</string>
    <string name="vo2max">VO2 max</string>
    <string name="cadencia">Cadencia</string>
...
